--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>RPG - Dragon Repeller</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div id="game">
         <div id = "stats">
@@ -28,7 +29,7 @@
 
     </div>
     
-
+    <script src = "./script.js"></script>
    
 </body>
 </html>
